<resources>
    <string name="app_name">MDLIVE</string>
    <string name="title_activity_doctor_list">DoctorList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_video_home">Video Consultation</string>
    <string name="invalid_credentials">Invalid Username or password</string>
    <string name="empty_credentials">Username and password should not be empty</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="sav">Schedule a Visit</string>
    <string name="mdlive_assist">MDLive Assist</string>
    <string name="my_health">My Health</string>
    <string name="message_center">Message Center</string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="myaccount">My Account</string>
    <string name="ok">OK</string>
    <string name="Ok">Ok</string>
    <string name="true_txt">true</string>
    <string name="bin_true">1</string>
    <string name="bin_false">0</string>
    <string name="delete">Delete</string>
    <string name="progress_dialog_messsage">Please wait</string>
    <string name="your_consultation">Your Consultation</string>
    <string name="summary">SUMMARY</string>
    <string name="test">Test</string>
    <string name="dollar_Amount49">$49.00</string>
    <string name="rate_consulatation">RATE CONSULTATION</string>
    <string name="done">Done</string>
    <string name="dollar">$</string>
    <string name="dollar_symbol">$</string>
    <string name="amount_zero">0.00</string>
    <string name="error">Error</string>
    <string name="image_name">IMAGE NAME</string>
    <string name="upload">UPLOAD</string>
    <string name="delete_customer_successfully">Customer document deleted successfully</string>
    <string name="medical_history">Medical History</string>
    <string name="last_update">Last Updated</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pre_existing_conditions">Pre-Existing Conditions</string>
    <string name="no_conditions_reported">No conditions reported</string>
    <string name="edit">EDIT</string>
    <string name="medications">Medications</string>
    <string name="allergies">Allergies</string>
    <string name="photos">PHOTOS</string>
    <string name="helpful_for_rashes">Helpful for rashes, cuts, etc.</string>
    <string name="take_photo">Take a photo</string>
    <string name="billing_info">Billing information</string>
    <string name="payment_credit_card">Your credit card will only be used for the\nconsultation cost and will be charged after your consultation.</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="mm_yy">mm/yy</string>
    <string name="zip_code">Zip Code</string>
    <string name="payment_zipcode_hint">12345-7890</string>
    <string name="card_type">Is this an FSA/HSA card?</string>
    <string name="apply_offer_code">Apply Offer Code</string>
    <string name="payment_total">Total :$49.00</string>
    <string name="total_amount_in_doller">Total :$</string>
    <string name="HostedPCI_webview_loadurl">file:///android_asset/htdocs/index.html</string>
    <string name="expiration_month_year">Expiration month/year</string>
    <string name="Month_year">MM/yy</string>
    <string name="MM_yyyy">MM/yyyy</string>
    <string name="please_enter_valid_zipcode">Please enter a valid Zipcode.</string>
    <string name="please_fill_required_fields">Please fill in all the required fields</string>
    <string name="exception_in_thread">Exception in thread</string>
    <string name="CANCEL">CANCEL</string>
    <string name="pharmacy_details_updated">Pharmacy details updated</string>
    <string name="credit_header">Credit Card</string>
    <string name="consultation_header">Your Consultation</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="resume_saved_consultation">Please resume your saved consultation to speak to your doctor</string>
    <string name="consultation_info">CONSULTATION INFO</string>
    <string name="patient">Patient:</string>
    <string name="reason">Reason:</string>
    <string name="doctor">Doctor:</string>
    <string name="choosen_pharmacy">CHOSEN PHARMACY</string>
    <string name="resume_consultation_txt">Resume Consultation</string>
    <string name="ph_manual_search">MANUAL SEARCH</string>
    <string name="ph_zipcode">ZIP Code</string>
    <string name="ph_or_str">OR</string>
    <string name="ph_Or_str">Or</string>
    <string name="emptyString"></string>
    <string name="doctor_on_call">Doctor On Call</string>
    <string name="average_wait">Average Wait Time: 6 min</string>
    <string name="average_wait_dots">Average Wait: ...</string>
    <string name="see_doctor_on_call">See Doctor on Call</string>
    <string name="choose_other_doctor">Choose Other Doctor</string>
    <string name="filter">FILTER</string>
    <string name="weight">Weight</string>
    <string name="lbs">lbs</string>
    <string name="locating_available_doctors">locating available doctors</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="doctoroncall_txt">Doctor On-Call is a 24 hour service where\n you can get an instant consultation by phone with the available doctor.</string>
    <string name="reason_txt">Hello Test, what seems to be the\n best problem today?</string>
    <string name="card_txt">Please fill your credit card information below :</string>
    <string name="choose_provider">Choose Doctor</string>
    <string name="available_txt"> Available 24/7 by phone</string>
    <string name="doctorOnCall_txt">Doctor on call</string>
    <string name="please_wait">Please Wait...</string>
    <string name="video_or_phonr">video or phone</string>
    <string name="phone">phone</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="general_practise">General Practise</string>
    <string name="capital_regional">Capital Regional\nMedical Center</string>
    <string name="qualifications">Qualifications</string>
    <string name="specialties">Specialties</string>
    <string name="licensed_in">Licensed In</string>
    <string name="languages_spoken">Languages Spoken</string>
    <string name="provider_location">Location</string>
    <string name="education">Education     </string>
    <string name="about_me">About Me     </string>
    <string name="request_appointment">Request Appointment</string>
    <string name="with_patient">With Patient</string>
    <string name="date_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="currently_with_patient">Currently with patient</string>
    <string name="not_available">not available</string>
    <string name="choose">Choose </string>
    <string name="select_provider">Or select a provider below</string>
    <string name="get_started">Patient Information</string>
    <string name="patientTxt">Patient</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="dateformat">mm/dd/yyyy</string>
    <string name="plscalAlert_txt">Please call 1-888-818-0978 to  add another child.</string>
    <string name="phonenumber">Phone Number</string>
    <string name="disclaimertxt">Your phone number will only be used if customer support is required.</string>
    <string name="nextBtn">Your phone number will only be used if customer support is required.</string>
    <string name="gender">Gender</string>
    <string name="addChildBtn">Add Child</string>
    <string name="location">Current Location</string>
    <string name="next_btn">Next</string>
    <string name="arTxt">AR</string>
    <string name="providerTypeTxt">Provider Type</string>
    <string name="pediatricianTxt">Pediatrician</string>
    <string name="locationTxt">My Location</string>
    <string name="markMarinoTxt">Mark Marino</string>
    <string name="please_choose">Please Choose</string>
    <string name="gone_to_emergency">Gone to the Emergency Room</string>
    <string name="used_urgent_care">Used Urgent Care/Retail Clinic</string>
    <string name="seen_my_provider">Seen my provider in Person</string>
    <string name="done_nothing">Done nothing</string>
    <string name="administrative_level1">administrative_area_level_1</string>
    <string name="provider_txt">Please enter the phone number \nwe should call:</string>
    <string name="visit_txt"> If you had not had this visit today\nwhat would you do?</string>
    <string name="primary_txt"> Do you have a primary care provider?</string>
    <string name="valid_phone_number">Please enter a valid Phone number</string>
    <string name="call_to_add_another_child">Please call 1-888-818-0978 to \nadd another child.</string>
    <string name="check_false">false</string>
    <string name="adult_share_account">The adult dependent has opted not to share his account</string>
    <string name="getstarted">getstarted</string>
    <string name="header_reason_txt">Reason for visit</string>
    <string name="subheader_reason_txt">What is the reason for your visit?</string>
    <string name="searchsymptom_txt">Search symptoms</string>
    <string name="searchProvidernmae_txt">Search provider name</string>
    <string name="acne_txt">Acne</string>
    <string name="alcohol_txt">Alcohol Dependencies</string>
    <string name="allergy_txt">Allergic Conjuctivitis</string>
    <string name="rihinits_txt">Allergic Rhinitis</string>
    <string name="anal_txt">Anal Itching</string>
    <string name="anxiety_txt">Anxiety</string>
    <string name="arthritis_txt">Arthritis</string>
    <string name="asthma_txt">Asthma</string>
    <string name="atheletesfoot_txt">Atheletes Foot</string>
    <string name="bloodsputum_txt">Blood In Sputum</string>
    <string name="bloodstool_txt">Blood In Stool</string>
    <string name="bloodurine_txt">Blood In Urine</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_symptom">Invalid Symptom</string>
    <string name="no_results_found_txt">No results found for</string>
    <string name="no_results_found_as_symptom_txt">submit {0} as your symptom</string>
    <string name="updatelocation">Update Location</string>
    <string name="doctor_filters">Doctor Filters</string>
    <string name="provider_name">Provider Name</string>
    <string name="any">Any</string>
    <string name="sort_by">Sort by</string>
    <string name="speciality">Speciality</string>
    <string name="located_in">Located in</string>
    <string name="txt_appointment_date">Appointment date</string>
    <string name="appointment_date">May 13, 2015</string>
    <string name="available_by">available_by</string>
    <string name="Speaks">speaks</string>
    <string name="current_loc_txt">Use Current Location</string>
    <string name="manual_txt_small">Manual Search</string>
    <string name="select_stg">Select State</string>
    <string name="apply">APPLY</string>
    <string name="Or">Or</string>
    <string name="state">State</string>
    <string name="doneUpperCase">DONE</string>
    <string name="my_account">My Account</string>
    <string name="closeBtn">Close Button</string>
    <string name="see_a_doctor_now">See Doctor Now</string>
    <string name="ideal_date">Ideal date</string>
    <string name="next_available">Next available</string>
    <string name="best_number_to_contact">Best number to contact</string>
    <string name="submit_request_form">Submit Request Form</string>
    <string name="reason_for_visit">What is the reason for your appointment?</string>
    <string name="additional_text">Additional comments or concerns</string>
    <string name="by_video">By Video</string>
    <string name="by_phone">By Phone</string>
</resources>