<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/common_style_W_Match_H_Match_O_Vertical"
    android:background="@color/white"
    android:weightSum="3">

    <LinearLayout
        style="@style/HomeItemsBaseStyle"
        android:paddingTop="8dp">

        <LinearLayout
            style="@style/HomeImageviewContainerStyle"
            android:onClick="onSeeADoctorNowClicked">

            <ImageView
                style="@style/HomeImageviewIconStyle"
                android:background="@drawable/dash_board_doctor_icon" />

            <TextView
                style="@style/HomeTextViewStyleLeft"
                android:text="@string/see_a_doctor_now" />

        </LinearLayout>


        <LinearLayout
            style="@style/HomeImageviewContainerStyle"
            android:onClick="onMyHealthClicked">

            <ImageView
                style="@style/HomeImageviewIconStyle"
                android:background="@drawable/dash_board_health_icon" />

            <TextView
                style="@style/HomeTextViewStyleLeft"
                android:text="@string/my_health" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/HomeItemsBaseStyle"
        android:paddingTop="20dp">

        <LinearLayout
            style="@style/HomeImageviewContainerStyle"
            android:onClick="onMdliveAssistClicked">

            <ImageView
                style="@style/HomeImageviewIconStyle"
                android:background="@drawable/dash_board_mdlive_icon" />

            <TextView
                style="@style/HomeTextViewStyleLeft"
                android:text="@string/mdlive_assist" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messageCenter"
            style="@style/HomeImageviewContainerStyle"
            android:onClick="onMessageCenterClicked">

            <ImageView
                style="@style/HomeImageviewIconStyle"
                android:background="@drawable/dash_board_message_icon" />

            <TextView
                style="@style/HomeTextViewStyleRight"
                android:text="@string/message_center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/HomeItemsBaseStyle"
        android:paddingTop="20dp">

        <LinearLayout
            style="@style/HomeImageviewContainerStyle"
            android:onClick="onSymptomCheckerClicked">

            <ImageView
                style="@style/HomeImageviewIconStyle"
                android:background="@drawable/dash_board_symptom_icon" />

            <TextView
                style="@style/HomeTextViewStyleRight"
                android:text="@string/symptom_checker" />

        </LinearLayout>

        <LinearLayout
            style="@style/HomeImageviewContainerStyle"
            android:onClick="onMyAccountClicked">

            <ImageView
                style="@style/HomeImageviewIconStyle"
                android:background="@drawable/dash_board_my_account_icon" />

            <TextView
                style="@style/HomeTextViewStyleRight"
                android:text="@string/my_account" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>