<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin = "@dimen/dimen_10_dp"
        card_view:cardCornerRadius="5dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/choose_pharmacy_background"
        android:layout_above="@+id/submitRequestForm">

            <LinearLayout
                style="@style/common_style_W_Match_H_Wrap_O_Vertical"
                android:padding="10dp"
                android:background="@drawable/shadow_rect_white">

                <TextView
                    style="@style/AppointmentRequestFieldsStyle"
                    android:id="@+id/appointmentIdealDate"
                    android:hint="@string/ideal_date"
                    android:tag="ideal_date"
                    android:drawableRight="@drawable/right_arrow_icon" />

                <TextView
                    style="@style/AppointmentRequestFieldsStyle"
                    android:id="@+id/appointmentNextAvailable"
                    android:hint="@string/next_available"
                    android:tag="next_available"
                    android:drawableRight="@drawable/right_arrow_icon" />

                <EditText
                    style="@style/AppointmentRequestFieldsStyle"
                    android:id="@+id/appointmentContactNumber"
                    android:hint="@string/best_number_to_contact"
                    android:tag="best_number_to_contact"
                    android:inputType="number"/>

                <EditText
                    style="@style/AppointmentRequestFieldsStyle"
                    android:id="@+id/appointmentReason"
                    android:hint="@string/reason_for_visit"
                    android:singleLine="true"
                    android:tag="reason_for_visit" />

                <EditText
                    style="@style/AppointmentRequestFieldsStyle"
                    android:id="@+id/appointmentComment"
                    android:hint="@string/additional_text"
                    android:tag="additional_text"
                    android:lines="10"
                    android:minLines="6"
                    android:gravity="top" />

                <LinearLayout
                    style="@style/common_style_W_Match_H_Wrap_O_Horizontal"
                    android:layout_marginTop="18dp">
                    <Button
                        style="@style/AppointmentRequestButtonStyle"
                        android:layout_weight="1"
                        android:hint="@string/by_video"
                        android:drawableLeft="@drawable/video_call_icon"
                        android:layout_marginRight="@dimen/dimen_4_dp"
                        />

                    <Button
                        style="@style/AppointmentRequestButtonStyle"
                        android:layout_weight="1"
                        android:hint="@string/by_phone"
                        android:drawableLeft="@drawable/phone_call_icon"
                        android:layout_marginLeft="@dimen/dimen_4_dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Important: By requesting an appointment, we will attempt to contact the requested provider on yout behalf to schedule an appointment. The request does not guarentee an appointment, and the time of the appointmentis subject to the provider's availability."
                    android:lineSpacingExtra="3dp"
                    android:textSize="14sp"/>

            </LinearLayout>

    </ScrollView>
    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/submitRequestForm">
        <Button
            style="@style/schedule_visit_button_style"
            android:text="@string/submit_request_form"
            android:tag="submit_request_form"/>
    </RelativeLayout>
</RelativeLayout>